Se devuelve un bool {liked} para un pst, se permite ver los favoritos de un usuario y hacer que un post se vuelva favorito, se permite editar un post
