# src/api/routes/routes.ts
@@ -8,6 +8,8 @@ router.post("/v1/twit",twitController.postTwit);
 router.post("/v1/twit/like",twitController.like);
 router.post("/v1/twit/retwit", twitController.retwit);
 router.post("/v1/twit/comment",twitController.comment);
+router.post("/v1/twit/favorite",twitController.saveFavorite);
+router.get("/v1/twit/favorite",twitController.getFavorites)
 router.get("/v1/twit/post", twitController.getPost);
 router.patch("/v1/twit/post",twitController.editPost);
 router.delete("/v1/twit/post",twitController.deletePost);
